<resources>
    <string name="app_name">SOHO2020</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_new_task_name">Enter new task name</string>
    <string name="add">Add</string>
    <string name="Starting_Minutes">0 minutes</string>
    <string name="goals">Goals</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="enter_goal">Enter Goal</string>
    <string name="please_enter">Please Enter Your Info to Continue</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="_0_minutes">0 minutes</string>
    <string name="add_more_goals">Add more goals</string>
    <string name="xx_minutes">XX minutes</string>
    <string name="test_goal_name">Test Goal Name</string>
    <string name="untitled_motivation">Untitled Motivation</string>
    <string name="test_task_1">Test task 1</string>
    <string name="xx_minutes_left">XX minutes left</string>
    <string name="title_activity_start">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_in_prompt">Please Sign In to Start Using</string>
    <string name="sign_in">Sign In</string>
</resources>