<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_anchorGravity="center"
    tools:context=".SubtaskActivity">

    <LinearLayout
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_marginLeft="105dp">


        <TextView
            android:id="@+id/Goals_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_goal"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/textview"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:text="@string/add"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</FrameLayout>