<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|center_vertical"
    android:background="#FFFFFF"
    android:clipToPadding="false"
    tools:context=".SubtaskActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="#ECECEC"
        android:orientation="vertical"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/Goals_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/goals"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <EditText
            android:id="@+id/Goal_text_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/enter_goal"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            tools:ignore="RtlHardcoded" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/Goals_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingEnd="10dp"
            android:paddingRight="14dp"
            android:text="@string/_0_minutes"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/Goals_more_button"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00FFFFFF"
            android:minHeight="30dp"
            android:text="@string/add_more_goals"
            android:textSize="10sp"
            tools:ignore="RtlHardcoded,SmallSp" />

        <Button
            android:id="@+id/Goals_add_subtask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:background="#03DAC5"
            android:textColor="#FFFFFF"
            tools:text="@string/add" />
    </LinearLayout>


</FrameLayout>