<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".NewTaskFragment">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#ECECEC"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/new_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_new_task_name"
            android:inputType="textPersonName" />

        <SeekBar
            android:id="@+id/Minutes_Slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="8dp"
            android:text="@string/Starting_Minutes"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/add_new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:text="@string/add" />

    </LinearLayout>

</FrameLayout>