<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="20dp"
            android:text="@string/untitled_motivation"
            android:textSize="40sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ProgressBar
            android:id="@+id/interim_progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="24dp"
            android:minHeight="24dp"
            android:padding="10dp" />

        <TextView
            android:id="@+id/Main_Goaltitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/test_goal_name"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/Main_Goaltime1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:text="@string/xx_minutes"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

</LinearLayout>