<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/fade_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:name="com.example.android.SOHO2020.NewTaskFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:paddingTop="20dp"
                            android:text="@string/untitled_motivation"
                            android:textSize="40sp"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />

                        <ProgressBar
                            android:id="@+id/interim_progressBar1"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxHeight="24dp"
                            android:minHeight="24dp"
                            android:padding="10dp" />

                        <TextView
                            android:id="@+id/Main_Goaltitle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/test_goal_name"
                            android:textSize="24sp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/Main_Goaltime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:paddingEnd="40dp"
                            android:paddingRight="40dp"
                            android:text="@string/xx_minutes"
                            tools:ignore="RtlHardcoded,RtlSymmetry" />

                </LinearLayout>

        </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>